2024が終わってから修正

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -3456,6 +3456,771 @@
     "以上です．\n",
     "次週はダイクストラアルゴリズムで単一始点最短経路問題を解くプログラムを作成します．"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 印刷用の余白\n",
+    "\n",
+    "出力を残したままPDFに印刷したときに，下が切れる場合はこの下の余白のセルを増やすこと．\n",
+    "\n",
+    "逆に多すぎる場合は余白のセルを減らすこと．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 余白\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 10\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 20\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 30\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 40\n",
+    "# \n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# 50\n"
+   ]
   }
  ],
  "metadata": {
