--- a/A2-2-4.ipynb
+++ b/A2-2-4.ipynb
@@ -150,6 +150,11 @@
     "   - `heapify_down`関数\n",
     "   - `draw`関数\n",
     "\n",
+    "1. `dijkstra`関数の`d[s] = 0`の行で頂点sの距離が短くなりますので，\n",
+    "   頂点`s`がヒープ条件を満たさない位置にあるかもしれません．\n",
+    "   この行の後に，節点sをヒープ条件を満たす位置に移動する処理が必要です．\n",
+    "   `heapify_up`関数でこの処理が行えます．\n",
+    "\n",
     "動作がおかしい場合は`dijkstra`関数の適当なところに`self.draw()`関数を追加して，ヒープの状態を確認するといいでしょう．\n",
     "\n",
     "**練習**\n",
